--- a/index.html
+++ b/index.html
@@ -9,10 +9,50 @@
 <body>
   <div id="main-menu">
     <h1>Vyber jazyk</h1>
-    <div class="lang-button" onclick="openLanguage('en')">🇬🇧<span>Angličtina</span></div>
-    <div class="lang-button" onclick="openLanguage('es')">🇪🇸<span>Španělština</span></div>
-    <div class="lang-button" onclick="openLanguage('fr')">🇫🇷<span>Francouzština</span></div>
-    <div class="lang-button" onclick="openLanguage('jp')">🇯🇵<span>Japonština</span></div>
+
+    <div class="lang-button" onclick="openLanguage('en')">
+      <img
+        src="https://flagcdn.com/16x12/gb.png"
+        srcset="https://flagcdn.com/32x24/gb.png 2x,
+                https://flagcdn.com/48x36/gb.png 3x"
+        width="16"
+        height="12"
+        alt="Anglická vlajka">
+      <span>Angličtina</span>
+    </div>
+
+    <div class="lang-button" onclick="openLanguage('es')">
+      <img
+        src="https://flagcdn.com/16x12/es.png"
+        srcset="https://flagcdn.com/32x24/es.png 2x,
+                https://flagcdn.com/48x36/es.png 3x"
+        width="16"
+        height="12"
+        alt="Španělská vlajka">
+      <span>Španělština</span>
+    </div>
+
+    <div class="lang-button" onclick="openLanguage('fr')">
+      <img
+        src="https://flagcdn.com/16x12/fr.png"
+        srcset="https://flagcdn.com/32x24/fr.png 2x,
+                https://flagcdn.com/48x36/fr.png 3x"
+        width="16"
+        height="12"
+        alt="Francouzská vlajka">
+      <span>Francouzština</span>
+    </div>
+
+    <div class="lang-button" onclick="openLanguage('jp')">
+      <img
+        src="https://flagcdn.com/16x12/jp.png"
+        srcset="https://flagcdn.com/32x24/jp.png 2x,
+                https://flagcdn.com/48x36/jp.png 3x"
+        width="16"
+        height="12"
+        alt="Japonská vlajka">
+      <span>Japonština</span>
+    </div>
   </div>
 
   <div id="color-screen" style="display:none;">
