--- a/index.html
+++ b/index.html
@@ -12,44 +12,40 @@
 
     <div class="lang-button" onclick="openLanguage('en')">
       <img
-        src="https://flagcdn.com/16x12/gb.png"
-        srcset="https://flagcdn.com/32x24/gb.png 2x,
-                https://flagcdn.com/48x36/gb.png 3x"
-        width="48"
-        height="36"
+        src="https://flagcdn.com/96x72/gb.png"
+        srcset="https://flagcdn.com/192x144/gb.png 2x"
+        width="96"
+        height="72"
         alt="Anglická vlajka">
       <span>Angličtina</span>
     </div>
 
     <div class="lang-button" onclick="openLanguage('es')">
       <img
-        src="https://flagcdn.com/16x12/es.png"
-        srcset="https://flagcdn.com/32x24/es.png 2x,
-                https://flagcdn.com/48x36/es.png 3x"
-        width="48"
-        height="36"
+        src="https://flagcdn.com/96x72/es.png"
+        srcset="https://flagcdn.com/192x144/es.png 2x"
+        width="96"
+        height="72"
         alt="Španělská vlajka">
       <span>Španělština</span>
     </div>
 
     <div class="lang-button" onclick="openLanguage('fr')">
       <img
-        src="https://flagcdn.com/16x12/fr.png"
-        srcset="https://flagcdn.com/32x24/fr.png 2x,
-                https://flagcdn.com/48x36/fr.png 3x"
-        width="48"
-        height="36"
+        src="https://flagcdn.com/96x72/fr.png"
+        srcset="https://flagcdn.com/192x144/fr.png 2x"
+        width="96"
+        height="72"
         alt="Francouzská vlajka">
       <span>Francouzština</span>
     </div>
 
     <div class="lang-button" onclick="openLanguage('jp')">
       <img
-        src="https://flagcdn.com/16x12/jp.png"
-        srcset="https://flagcdn.com/32x24/jp.png 2x,
-                https://flagcdn.com/48x36/jp.png 3x"
-        width="48"
-        height="36"
+        src="https://flagcdn.com/96x72/jp.png"
+        srcset="https://flagcdn.com/192x144/jp.png 2x"
+        width="96"
+        height="72"
         alt="Japonská vlajka">
       <span>Japonština</span>
     </div>
