--- a/index.html
+++ b/index.html
@@ -11,50 +11,29 @@
     <h1>Vyber jazyk</h1>
 
     <div class="lang-button" onclick="openLanguage('en')">
-      <img
-        src="https://flagcdn.com/96x72/gb.png"
-        srcset="https://flagcdn.com/192x144/gb.png 2x"
-        width="96"
-        height="72"
-        alt="Anglická vlajka">
+      <img src="https://flagcdn.com/96x72/gb.png" alt="Anglická vlajka">
       <span>Angličtina</span>
     </div>
 
     <div class="lang-button" onclick="openLanguage('es')">
-      <img
-        src="https://flagcdn.com/96x72/es.png"
-        srcset="https://flagcdn.com/192x144/es.png 2x"
-        width="96"
-        height="72"
-        alt="Španělská vlajka">
+      <img src="https://flagcdn.com/96x72/es.png" alt="Španělská vlajka">
       <span>Španělština</span>
     </div>
 
     <div class="lang-button" onclick="openLanguage('fr')">
-      <img
-        src="https://flagcdn.com/96x72/fr.png"
-        srcset="https://flagcdn.com/192x144/fr.png 2x"
-        width="96"
-        height="72"
-        alt="Francouzská vlajka">
+      <img src="https://flagcdn.com/96x72/fr.png" alt="Francouzská vlajka">
       <span>Francouzština</span>
     </div>
 
     <div class="lang-button" onclick="openLanguage('jp')">
-      <img
-        src="https://flagcdn.com/96x72/jp.png"
-        srcset="https://flagcdn.com/192x144/jp.png 2x"
-        width="96"
-        height="72"
-        alt="Japonská vlajka">
+      <img src="https://flagcdn.com/96x72/jp.png" alt="Japonská vlajka">
       <span>Japonština</span>
     </div>
   </div>
 
   <div id="color-screen" style="display:none;">
     <h2 id="language-name"></h2>
-    <div id="color-buttons"></div>
-    <button onclick="goBack()">Zpět</button>
+    <div id="color-buttons" class="grid"></div>
   </div>
 
   <script src="script.js"></script>
