responzivita, pozadí, tlačítko zpět

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   </div>
 
   <div id="color-screen" style="display:none;">
+    <div id="flag-background"></div>
+    <div class="overlay"></div>
     <h2 id="language-name"></h2>
     <div id="color-buttons" class="grid"></div>
   </div>
